--- a/css/main.sass
+++ b/css/main.sass
@@ -86,6 +86,8 @@ header
 .navbar-default 
 	background-color: transparent
 	border-color: transparent
+	margin-right: -70px
+	margin-top: 10px
 
 	.navbar-nav 
 
@@ -124,11 +126,6 @@ header
 					background-color: transparent
 					color: rgba(255,255,255,0.9)
 
-
-
-.navbar-right
-	margin-right: -70px
-	margin-top: 10px
 
 .about-section
 
@@ -180,7 +177,7 @@ header
 			border: 0
 
 
-.testimonials-section
+.carousel-section
 	background-color: #DCF5FF
 	overflow-x: hidden
 	padding-bottom: 55px
